# api/gen/api.gen.go
@@ -124,10 +124,10 @@ type ImageTemplateConfig struct {
 
 // RunEnvironment defines model for RunEnvironment.
 type RunEnvironment struct {
-	CompileCmd  string  `json:"compileCmd"`
-	CompileTime float32 `json:"compileTime"`
-	RunCmd      string  `json:"runCmd"`
-	RunTime     float32 `json:"runTime"`
+	CompileCmd  string  `json:"CompileCmd"`
+	CompileTime float32 `json:"CompileTime"`
+	RunCmd      string  `json:"RunCmd"`
+	RunTime     float32 `json:"RunTime"`
 }
 
 // SandboxRequest defines model for SandboxRequest.
