# docs/api/swagger.json
@@ -238,24 +238,24 @@
       "RunEnvironment": {
         "type": "object",
         "properties": {
-          "compileCmd": {
+          "CompileCmd": {
             "type": "string"
           },
-          "runCmd": {
+          "RunCmd": {
             "type": "string"
           },
-          "runTime": {
+          "RunTime": {
             "type": "number"
           },
-          "compileTime": {
+          "CompileTime": {
             "type": "number"
           }
         },
         "required": [
-          "compileCmd",
-          "runCmd",
-          "runTime",
-          "compileTime"
+          "CompileCmd",
+          "RunCmd",
+          "RunTime",
+          "CompileTime"
         ]
       },
       "SandboxResponse": {
